# dotenv_consts

./: .env  Cargo.toml  README.md
src/: lib.rs
tests/: general.rs
